--- a/themes/battle/layouts/_default/single.html
+++ b/themes/battle/layouts/_default/single.html
@@ -53,10 +53,10 @@
 <div class="outercontent">
   	  <div class="content clear">
 
-  	  	<form method="POST" action="https://api.staticman.net/v2/entry/veeneck/Battle-Of-Brothers-Hugo/master/comments}">
+  	  	<form method="POST" action="https://api.staticman.net/v2/entry/veeneck/Battle-of-Brothers-Hugo/master/comments}">
 		  <input name="options[redirect]" type="hidden" value="https://battleofbrothers.com">
 		  <!-- e.g. "2016-01-02-this-is-a-post" -->
-		  <input name="options[slug]" type="hidden" value="{{ .Params.slug }}">
+		  <input name="options[slug]" type="hidden" value="https://battleofbrothers.com/{{ .RelPermalink }}">
 		  <label><input name="fields[name]" type="text">Name</label>
 		  <label><input name="fields[email]" type="email">E-mail</label>
 		  <label><textarea name="fields[message]"></textarea>Message</label>
