--- a/themes/battle/layouts/_default/single.html
+++ b/themes/battle/layouts/_default/single.html
@@ -59,7 +59,7 @@
 		  <input name="options[slug]" type="hidden" value="https://battleofbrothers.com/{{ .RelPermalink }}">
 		  <label><input name="fields[name]" type="text">Name</label>
 		  <label><input name="fields[email]" type="email">E-mail</label>
-		  <label><textarea name="fields[message]"></textarea>Message</label>
+		  <label><textarea name="fields[body]"></textarea>Message</label>
 		  
 		  <button type="submit">Go!</button>
 		</form>
