forget required fields

--- a/themes/battle/layouts/_default/single.html
+++ b/themes/battle/layouts/_default/single.html
@@ -56,7 +56,7 @@
   	  	<form method="POST" action="https://api.staticman.net/v2/entry/veeneck/Battle-of-Brothers-Hugo/master/comments}">
 		  <input name="options[redirect]" type="hidden" value="https://battleofbrothers.com">
 		  <!-- e.g. "2016-01-02-this-is-a-post" -->
-		  <input name="options[slug]" type="hidden" value="https://battleofbrothers.com/{{ .RelPermalink }}">
+		  <input name="options[slug]" type="hidden" value="{{ .Params.url }}">
 		  <label><input name="fields[name]" type="text">Name</label>
 		  <label><input name="fields[email]" type="email">E-mail</label>
 		  <label><textarea name="fields[body]"></textarea>Message</label>
