--- a/themes/battle/layouts/_default/single.html
+++ b/themes/battle/layouts/_default/single.html
@@ -55,10 +55,11 @@
 
   	  	<form method="POST" action="https://api.staticman.net/v2/entry/veeneck/Battle-of-Brothers-Hugo/master/comments}">
 		  <input name="options[redirect]" type="hidden" value="https://battleofbrothers.com">
+		  <input name="options[slug]" type="hidden" value="{{ .Params.url }}">
 		  <!-- e.g. "2016-01-02-this-is-a-post" -->
 		  <label><input name="fields[name]" type="text">Name</label>
 		  <label><input name="fields[email]" type="email">E-mail</label>
-		  <label><textarea name="fields[body]"></textarea>Message</label>
+		  <label><textarea name="fields[message]"></textarea>Message</label>
 		  
 		  <button type="submit">Go!</button>
 		</form>
