--- a/themes/battle/layouts/_default/single.html
+++ b/themes/battle/layouts/_default/single.html
@@ -64,22 +64,9 @@
     {{ $.Scratch.Add "hasComments" 1 }}
     {{ if not .reply_to }}
 
-    	<li >
-    		<div class="comment-body">
-    			<div class="comment-author vcard">
-    				<img src="https://www.gravatar.com/avatar/{{ .email }}?s=100" alt="" class="avatar avatar-64 photo" height="118" width="118">
-    			</div>
-    			<div class="comment-wrapper">
-    				<p>{{ .body | markdownify }}</p>
-				</div>
-				<div class="comment-meta commentmetadata">
-					<a href="{{ .Permalink }}#{{ ._id }}">#</a> by <cite class="fn"><a href="http://twitter.com/veeneck" rel="external nofollow" class="url">{{ .name }}</a></cite> {{ dateFormat "Monday, Jan 2, 2006" .date }}
-				</div>
-				<div class="reply">
-					<a id="{{ ._id }}" class="btn-info comment-reply-link" href="#comment-form" onclick="changeValue('fields[reply_to]', '{{ ._id }}')">Reply</a>
-				</div>
-			</div>
-		</li>
+    	{{ partial "comment-display.html" . }}
+
+		{{ partial "comment-replies" (dict "entryId_parent" $entryId "SiteDataComments_parent" $.Site.Data.comments "parentId" ._id "parentName" .name "context" .) }}
 
     {{ end }}
   {{ end }}     
