nested comments with count

--- a/themes/battle/layouts/_default/single.html
+++ b/themes/battle/layouts/_default/single.html
@@ -51,27 +51,25 @@
 </div>
 
 <div class="outercontentalt">
-  	  <div class="content clear">
+  	<div class="content clear">
 
-  	  	 <h3>Comments</h3>
-  {{ $.Scratch.Add "hasComments" 0 }}
-  {{ $entryId := .File.BaseFileName }}
-
-  <h5 class="grace comment-count"><span class="legacy"><?php echo $comment_count ?></span> of you did not hold your tongue!</h5>
+	  {{ $entryId := .File.BaseFileName }}
+	  {{ $commentsForPost := index $.Site.Data.comments $entryId }}
+	  {{ with $commentsForPost }}
+	    <h5 class="grace comment-count"><span class="legacy">{{ len $commentsForPost }}</span> of you did not hold your tongue!</h5>
 		<ol id="comments" class="commentlist">
+	  		{{ range $index, $comments := $commentsForPost }}
+	    		{{ if not .reply_to }}
 
-  {{ range $index, $comments := (index $.Site.Data.comments $entryId ) }}
-    {{ $.Scratch.Add "hasComments" 1 }}
-    {{ if not .reply_to }}
+	    			{{ partial "comment-display.html" (dict "entryId_parent" $entryId "SiteDataComments_parent" $.Site.Data.comments "parentId" ._id "parentName" .name "context" .) }} 
 
-    	{{ partial "comment-display.html" (dict "entryId_parent" $entryId "SiteDataComments_parent" $.Site.Data.comments "parentId" ._id "parentName" .name "context" .) }} 
-
-    {{ end }}
-  {{ end }}     
-  </ol>  
-
-  		{{ partial "comment-form.html" . }}
-      </div>
-	</div> <!-- #content -->
+	    		{{ end }}
+	  		{{ end }}     
+	  	</ol>  
+	  {{ end }}
+ 
+	  {{ partial "comment-form.html" . }}
+     </div>
+</div> <!-- #content -->
 
 {{- end }}
