--- a/themes/battle/layouts/partials/comment-form.html
+++ b/themes/battle/layouts/partials/comment-form.html
@@ -20,7 +20,7 @@
           </p>
           <p class="comment-form-url">
             <label for="website">Website</label> 
-            <input id="website" name="fields[website]" type="url" class="post-comment-field" placeholder="Your website" ize="30" maxlength="200">
+            <input id="website" name="fields[website]" type="url" class="post-comment-field" placeholder="http://yoursite.com" ize="30" maxlength="200">
           </p>
           <p class="form-submit">
             <input type="submit" id="submit" class="post-comment-field btn submit" value="Submit" id="submit_button" value="Post Comment">
