--- a/themes/battle/static/sass/includes/_mixins.scss
+++ b/themes/battle/static/sass/includes/_mixins.scss
@@ -11,12 +11,7 @@
         }
     }
    @else if $point == tablet-screen {
-        @media (min-width: 50em) {
-            @content;
-        }
-    }
-    @else if $point == large-condensed-screen {
-        @media (min-width: 42em) {
+        @media (min-width: 800px) {
             @content;
         }
     }
