--- a/themes/battle/static/css/global.css
+++ b/themes/battle/static/css/global.css
@@ -530,8 +530,11 @@ a.ryanshield {
   background-color: #a4dee1; }
 
 a.ryanshield img {
-  margin-right: 200px;
+  margin-right: 35%;
   padding-top: 42px; }
+  @media (min-width: 1080px) {
+    a.ryanshield img {
+      margin-right: 200px; } }
 
 a.ryanshield:hover, a.ryanshield.selected {
   background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.07) 50%, transparent 50%), linear-gradient(90deg, rgba(255, 255, 255, 0.13) 50%, transparent 50%), linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.17) 50%), linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.19) 50%);
@@ -550,8 +553,11 @@ a.chrisshield {
   background-color: #d8ed9e; }
 
 a.chrisshield img {
-  margin-left: 200px;
+  margin-left: 35%;
   padding-top: 42px; }
+  @media (min-width: 1080px) {
+    a.chrisshield img {
+      margin-left: 200px; } }
 
 a.chrisshield:hover, a.chrisshield.selected {
   background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.07) 50%, transparent 50%), linear-gradient(90deg, rgba(255, 255, 255, 0.13) 50%, transparent 50%), linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.17) 50%), linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.19) 50%);
@@ -566,10 +572,16 @@ nav {
   font-family: "Grace";
   letter-spacing: 1px;
   color: #454545;
-  font-size: 20px;
+  font-size: 18px;
   padding: 40px 0px 30px 0;
   z-index: 2;
   margin-top: -161px; }
+  @media (min-width: 800px) {
+    nav {
+      font-size: 18px; } }
+  @media (min-width: 1080px) {
+    nav {
+      font-size: 20px; } }
 
 nav div.navcontainer {
   display: -webkit-box;
@@ -592,9 +604,12 @@ nav a {
   -webkit-backface-visibility: hidden; }
 
 nav span {
-  padding: 0px 0px 30px 0px;
+  padding: 0px 0px 15px 0px;
   display: inline-block;
   margin: 0px 0px; }
+  @media (min-width: 1080px) {
+    nav span {
+      padding: 0px 0px 30px 0px; } }
 
 div.navcontainer a {
   display: inline-block;
@@ -603,13 +618,28 @@ div.navcontainer a {
   position: relative;
   transform: translateZ(0); }
 
-.navspacer {
-  width: 266px; }
+.navbox {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  max-width: 430px; }
+
+.leftnav {
+  margin-right: 225px; }
+
+.navbox span {
+  width: 33%; }
 
 nav a img {
-  display: inline-block;
+  display: none;
   margin-right: 15px;
   margin-bottom: -2px; }
+  @media (min-width: 1080px) {
+    nav a img {
+      display: inline-block; } }
 
 nav div.blog a.blog:before,
 nav div.timeline a.timeline:before,
@@ -624,7 +654,7 @@ nav div.about a.about:before {
   position: absolute;
   left: 0;
   margin-left: -20px;
-  top: 35px; }
+  top: 34px; }
 
 nav div.blog a.blog,
 nav div.timeline a.timeline,
