--- a/themes/battle/static/css/ryan.css
+++ b/themes/battle/static/css/ryan.css
@@ -98,7 +98,11 @@ nav {
 /* ARTICLE */
 article {
   min-height: 400px;
-  width: 960px; }
+  max-width: 960px;
+  margin-top: 30px; }
+  @media (min-width: 800px) {
+    article {
+      margin-top: 0px; } }
 
 article h3 {
   color: #bf4f6f; }
