--- a/themes/battle/static/sass/ryan.scss
+++ b/themes/battle/static/sass/ryan.scss
@@ -1,3 +1,5 @@
+@import 'includes/_mixins';
+
 /* RESETS & BASIC PAGE SETUP */
 
 * { margin: 0; padding: 0; }
@@ -95,7 +97,11 @@ nav {
 
 article {
 	min-height: 400px;
-	width: 960px;	
+	max-width: 960px;
+	margin-top:30px;
+	@include breakpoint(tablet-screen) {
+		margin-top:0px;
+    }
 }
 
 article h3 {
