--- a/themes/battle/static/css/post.css
+++ b/themes/battle/static/css/post.css
@@ -1,3 +1,6 @@
+/* GENERAL */
+/* RYAN */
+/* CHRIS */
 /* STRUCTURE */
 .outercontent {
   padding-bottom: 100px; }
@@ -348,7 +351,10 @@ article small {
   /*background-color: overriden; */
   margin-bottom: 0px !important;
   margin-top: 0px !important;
-  max-width: 430px; }
+  max-width: 100%; }
+  @media (min-width: 800px) {
+    .comment-wrapper {
+      max-width: 430px; } }
 
 .comment-body {
   clear: both;
@@ -371,19 +377,26 @@ article small {
 
 .comment-body .reply {
   text-align: right;
-  max-width: 430px;
+  max-width: 100%;
   padding-bottom: 30px;
   /*background-color: overriden; */
   padding-right: 50px;
   position: relative;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+  @media (min-width: 800px) {
+    .comment-body .reply {
+      max-width: 430px; } }
 
 .comment-author {
+  display: none;
   float: right;
   width: 138px;
   height: 138px;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.05); }
+  @media (min-width: 800px) {
+    .comment-author {
+      display: block; } }
 
 .comment-author cite {
   font-style: normal !important;
@@ -413,11 +426,14 @@ cite.fn {
 
 .comment-meta {
   color: #454545;
-  width: 250px;
+  width: 100%;
   margin-bottom: -20px;
   z-index: 5;
   position: relative;
   font-size: 14px !important; }
+  @media (min-width: 800px) {
+    .comment-meta {
+      max-width: 250px; } }
 
 .comment-count {
   font-size: 28px;
@@ -451,7 +467,7 @@ cite.fn {
   margin-top: 30px; }
 
 .comment-form {
-  max-width: 960px;
+  max-width: 1080px;
   text-align: left;
   clear: both;
   color: #454545; }
@@ -470,11 +486,14 @@ cite.fn {
   height: 231px; }
 
 .comment-form-comment {
-  max-width: 450px;
-  float: right;
+  max-width: 100%;
   display: block;
-  height: 233px;
-  padding: 0px 0px 0px 30px; }
+  height: 233px; }
+  @media (min-width: 800px) {
+    .comment-form-comment {
+      max-width: 450px;
+      float: right;
+      padding: 0px 0px 0px 30px; } }
 
 textarea {
   width: 400px;
