--- a/themes/battle/static/css/home.css
+++ b/themes/battle/static/css/home.css
@@ -1,3 +1,6 @@
+/* GENERAL */
+/* RYAN */
+/* CHRIS */
 /* This is because the left checker and right checker miss by 1 pixel */
 body {
   background: #d8ed9e;
@@ -41,7 +44,7 @@ body {
 
 .home .leftnav, .home .rightnav {
   text-align: center;
-  width: 360px; }
+  max-width: 360px; }
 
 .home .leftnav a {
   color: #fff;
@@ -74,16 +77,28 @@ body {
 
 /* CURRENTLY THE FAQ ABOUT THE CONTEST ON HOME PAGE - If we use pattern elsewhere, move to common */
 .faq {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
   margin-top: 50px;
   margin-bottom: 50px;
   background-color: #fff;
   box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.08);
-  padding: 30px; }
+  padding: 30px 0px;
+  width: 100%; }
+  @media (min-width: 800px) {
+    .faq {
+      flex-direction: row; } }
 
 .faq .question {
-  width: 450px;
-  padding-bottom: 20px;
-  float: left; }
+  max-width: 100%;
+  padding-bottom: 20px; }
+  @media (min-width: 800px) {
+    .faq .question {
+      max-width: 50%; } }
 
 .faq .question h4 {
   text-transform: uppercase;
