--- a/themes/battle/static/sass/home.scss
+++ b/themes/battle/static/sass/home.scss
@@ -1,3 +1,5 @@
+@import 'includes/_variables';
+@import 'includes/_mixins';
 
 /* This is because the left checker and right checker miss by 1 pixel */
 
@@ -43,7 +45,7 @@ body {
 
 .home .leftnav, .home .rightnav {
 	text-align: center;
-	width: 360px;
+	max-width: 360px;
 }
 
 .home .leftnav a {
@@ -84,17 +86,25 @@ body {
 /* CURRENTLY THE FAQ ABOUT THE CONTEST ON HOME PAGE - If we use pattern elsewhere, move to common */
 
 .faq {
+	@include flex();
+	flex-direction:column;
 	margin-top: 50px;
 	margin-bottom: 50px;
 	background-color: #fff;
 	box-shadow: 5px 5px 2px rgba(0,0,0,0.08);
-	padding: 30px;
+	padding: 30px 0px;
+	width: 100%;
+	@include breakpoint(tablet-screen) {
+		flex-direction:row;
+    }
 }
 
 .faq .question {
-	width: 450px;
+	max-width: 100%;
 	padding-bottom: 20px;
-	float: left;
+	@include breakpoint(tablet-screen) {
+		max-width: 50%;
+    }
 }
 
 .faq .question h4 {
