Hide comment form

--- a/themes/battle/layouts/partials/comment-form.html
+++ b/themes/battle/layouts/partials/comment-form.html
@@ -2,7 +2,8 @@
   <div id="respond" class="comment-respond">
     <h3 id="reply-title" class="comment-reply-title">Speak Freely <small></h3>     
 
-    <form class="comment-form" method="POST" action="https://api.staticman.net/v2/entry/veeneck/Battle-of-Brothers-Hugo/master/comments">
+    <!-- This would go to https://api.staticman.net/v2/entry/veeneck/Battle-of-Brothers-Hugo/master/comments before spam became such an issue -->
+    <!--<form class="comment-form" method="POST" action="">
         <p class="comment-notes">
           <span id="email-notes">Your email address will not be published.</span> Required fields are marked <span class="required">*</span>
         </p>
@@ -32,7 +33,7 @@
             <input type="hidden" name="options[parent]" value="{{ .File.BaseFileName }}">
             <input type="hidden" name="fields[reply_to]" value="">
           </p>      
-      </form>
+      </form>-->
     </div><!-- #respond -->
 
     <div id="post-submitted">
