--- a/themes/battle/layouts/_default/baseof.html
+++ b/themes/battle/layouts/_default/baseof.html
@@ -18,7 +18,23 @@
 
     {{ block "main" . -}}{{- end }}
 
-    {{ template "_internal/google_analytics_async.html" . }}
+     {{ if not .Site.BuildDrafts }}
+    <!-- Fathom - simple website analytics - https://usefathom.com -->
+    <script>
+    (function(f, a, t, h, o, m){
+    a[h]=a[h]||function(){
+        (a[h].q=a[h].q||[]).push(arguments)
+    };
+    o=f.createElement('script'),
+    m=f.getElementsByTagName('script')[0];
+    o.async=1; o.src=t; o.id='fathom-script';
+    m.parentNode.insertBefore(o,m)
+    })(document, window, '//cdn.usefathom.com/tracker.js', 'fathom');
+    fathom('set', 'siteId', 'AYISLDQO');
+    fathom('trackPageview');
+    </script>
+  <!-- / Fathom -->
+  {{ end }}
     {{ partial "footer.html" . }}
   </body>
 </html>
